<resources>
    <string name="app_name">EssentialApplication</string>
    <string name="vessel_name">Vessel Name</string>
    <string name="vessel_reg">Vessel Reg</string>
    <string name="observer">Observer</string>
    <string name="skipper">Skipper</string>
    <string name="select_a_date">Select a Date</string>
    <string name="enter_port">Enter port</string>
    <string name="enter_region">Enter Region</string>
    <string name="enter_specie">Enter Specie</string>
    <string name="text_additional_comments">Additional Comments</string>
    <string name="text_string_number">Enter a String Number</string>
    <string name="text_soak_time">Soak Time</string>
</resources>